--- a/PEC4_Ej_Prac/ecommerce/src/app/app.component.html
+++ b/PEC4_Ej_Prac/ecommerce/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 <main class="main">
   <!-- Article item app -->
-  <app-article-item></app-article-item>
+  <app-article-list></app-article-list>
 </main>
 
 <router-outlet />
