--- a/PEC4_Ej_Prac/ecommerce/src/app/app.component.html
+++ b/PEC4_Ej_Prac/ecommerce/src/app/app.component.html
@@ -2,6 +2,7 @@
 </style>
 <main class="main">
   <!-- Article item app -->
-  <app-article-item></app-article-item>
+  <!-- Exercise 7: Article list app -->
+  <app-article-list></app-article-list>
 </main>
 <router-outlet />
